# syllabi_analizer

./: .env.example  .gitignore  ANTI_CRAWLER_TECHNIQUES.md  BUGFIX.md  CHANGES.md  CLASSIFICATION_README.md  ENHANCEMENTS.md  PARALLEL_PARSING.md  PROGRESS_UPDATES.md  README.md  README_SCRAPER.md  README_crawl_programs.md  TECHNICAL_REPORT.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  add_course_topics.py  analyze_course_inventory.py  analyze_results.py  classify_ai_ds_programs.py  classify_courses.py  classify_programs.py  crawl_programs.py  crawl_programs_with_cookies.py  debug_html.py  executive_report.md  explain_other_courses.py  export_to_csv.py  extract_other_courses.py  extract_text.py  generate_technical_report.py  identify_ai_ds_programs.py  main.py  manual_reclassify.py  models.py  other_courses_analysis.md  page_source_debug.html  parse_syllabi.py  pyproject.toml  reclassified_courses.csv  reclassify_other_courses.py  (+12 more)
